--- a/before_u.html
+++ b/before_u.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -105,7 +105,7 @@
                 <div>
                   <div class="slide">
                     <a href="somepage.html?ref=Slide%201">
-                      <img src="images/8675309-before_brass_band.jpg" />
+                      <img src="images/8675309-before_brass_band.jpg" alt="brass band">
                     </a>
                   </div>
                   <div class="slide">
@@ -115,7 +115,7 @@
                   </div>
                   <div class="slide">
                     <a href="somepage.html?ref=Slide%203">
-                      <img src="images/8675309-before_construction.jpg" />
+                      <img src="images/8675309-before_construction.jpg" alt = "Before construction of Smith Dormitory" />
                     </a>
                   </div>
                 </div>
@@ -245,7 +245,11 @@
                 <form action="#" method="post">
 
                   <!-- container for displaying form errors -->
-                  <div id="error"></div>
+                  <div id="error">
+                    <!-- Error message container -->
+                    <p>An error has occurred. Please check the input. </p>
+                  </div>
+                  
 
                   <div class="required form-group">
                     Name:
